--- a/theo_house_of_fun/test1.html
+++ b/theo_house_of_fun/test1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Porfolio</title>
+    <title>Portfolio</title>
     <div class="heart"></div>
     <link rel="stylesheet" href="mystylesheet.css" />
   </head>
