--- a/theo_house_of_fun/test1.html
+++ b/theo_house_of_fun/test1.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>My House</title>
     <div class="heart"></div>
     <link rel="stylesheet" href="mystylesheet.css" />
   </head>
   <body>
-<h1>This is my heart-Beat</h1>
-
+    <h1>This is my heart-Beat</h1>
   </body>
 </html>
